[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/inventory.gd" type="Script" id=1]
[ext_resource path="res://ui/item_counter.gd" type="Script" id=2]
[ext_resource path="res://ui/components/big_font.res" type="DynamicFont" id=3]
[ext_resource path="res://ui/icons/item_flag.png" type="Texture" id=4]
[ext_resource path="res://ui/items/player_desc.tres" type="Resource" id=5]
[ext_resource path="res://ui/components/hrule.stylebox" type="StyleBox" id=6]
[ext_resource path="res://ui/icons/item_bug.png" type="Texture" id=7]
[ext_resource path="res://ui/icons/item_gem.png" type="Texture" id=8]
[ext_resource path="res://ui/icons/item_capacitor.png" type="Texture" id=9]
[ext_resource path="res://ui/inventory_env.res" type="Environment" id=10]
[ext_resource path="res://ui/components/item_list.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/theming/panel3_transparent.png" type="Texture" id=12]

[sub_resource type="World" id=4]
environment = ExtResource( 10 )

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="inventory" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
player_description = ExtResource( 5 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
world = SubResource( 4 )
handle_input_locally = false
render_target_update_mode = 3

[node name="object_ref" type="Spatial" parent="Viewport"]

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( 0.614907, 0.774376, -0.1491, -0.313623, 0.41361, 0.854732, 0.723554, -0.47882, 0.497194, -0.0264456, 0.209806, 0.094446 )
light_energy = 0.5

[node name="SpringArm" type="SpringArm" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.944584, 0.32827, 0, -0.32827, 0.944584, 0, -0.00165046, 0.00688021 )
collision_mask = 0

[node name="Camera" type="Camera" parent="Viewport/SpringArm"]
fov = 60.0

[node name="box" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -20.0

[node name="items" type="VBoxContainer" parent="box"]
margin_right = 350.0
margin_bottom = 1040.0

[node name="item_list" parent="box/items" instance=ExtResource( 11 )]
margin_bottom = 1040.0

[node name="viewport_window" type="TextureRect" parent="box"]
margin_left = 354.0
margin_right = 1580.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="PanelContainer" parent="box/viewport_window"]
margin_left = 30.0
margin_top = 30.0
margin_right = 389.185
margin_bottom = 191.0
rect_min_size = Vector2( 320, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="box/viewport_window/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 352.185
margin_bottom = 154.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="item" type="VBoxContainer" parent="box/viewport_window/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 335.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="name" type="Label" parent="box/viewport_window/Panel/MarginContainer/item"]
margin_right = 325.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Item"

[node name="spacer" type="Panel" parent="box/viewport_window/Panel/MarginContainer/item"]
margin_top = 58.0
margin_right = 325.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 15 )
custom_styles/panel = ExtResource( 6 )

[node name="description" type="Label" parent="box/viewport_window/Panel/MarginContainer/item"]
margin_top = 77.0
margin_right = 325.0
margin_bottom = 91.0
text = "Item"
autowrap = true

[node name="spacer2" type="Panel" parent="box/viewport_window/Panel/MarginContainer/item"]
margin_top = 95.0
margin_right = 325.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 15 )
custom_styles/panel = ExtResource( 6 )

[node name="sub_items" type="GridContainer" parent="box/viewport_window/Panel/MarginContainer/item"]
margin_top = 114.0
margin_right = 325.0
margin_bottom = 114.0
columns = 2

[node name="NinePatchRect" type="NinePatchRect" parent="box/viewport_window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 2.0
margin_right = 3.0
margin_bottom = 2.0
texture = ExtResource( 12 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
__meta__ = {
"_edit_lock_": true
}

[node name="small_items" type="GridContainer" parent="box"]
margin_left = 1584.0
margin_right = 1840.0
margin_bottom = 1040.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 0
custom_constants/vseparation = 25
columns = 2

[node name="TextureRect2" type="TextureRect" parent="box/small_items"]
margin_right = 126.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="gem" type="Label" parent="box/small_items"]
margin_left = 130.0
margin_top = 23.0
margin_right = 256.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="box/small_items"]
margin_top = 125.0
margin_right = 126.0
margin_bottom = 225.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="bug" type="Label" parent="box/small_items"]
margin_left = 130.0
margin_top = 148.0
margin_right = 256.0
margin_bottom = 202.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
script = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="box/small_items"]
margin_top = 250.0
margin_right = 126.0
margin_bottom = 350.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="capacitor" type="Label" parent="box/small_items"]
margin_left = 130.0
margin_top = 273.0
margin_right = 256.0
margin_bottom = 327.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
script = ExtResource( 2 )

[node name="TextureRect5" type="TextureRect" parent="box/small_items"]
margin_top = 375.0
margin_right = 126.0
margin_bottom = 475.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="flag" type="Label" parent="box/small_items"]
margin_left = 130.0
margin_top = 398.0
margin_right = 256.0
margin_bottom = 452.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
script = ExtResource( 2 )

[connection signal="item_focused" from="box/items/item_list" to="." method="_on_item_focused"]
